# dbt-osmosis-cll

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  NOTICE  README.md  Taskfile.yml  pyproject.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: lint.yml  tests.yml
demo_duckdb/: integration_tests.sh
docs/: USAGE.md  sidebars.js
docs/docs/: intro.md
docs/docs/how-to/: index.md
docs/docs/reference/: cli.md
docs/docs/tutorial-basics/: commands.md
docs/docs/tutorial-yaml/: agents.md  inheritance.md
docs/plans/: 2026-06-10-phase1-cll-roadmap.md  2026-06-11-data-mesh-diskussionspapier.md  bug-cll-table-alias-resolved-as-model.md
licenses/: dbt-column-lineage-MIT.txt
src/dbt_osmosis_cll/: __main__.py  config.py
src/dbt_osmosis_cll/cli/: __init__.py  main.py
src/dbt_osmosis_cll/cll_generator/: api.py
src/dbt_osmosis_cll/cll_generator/artifacts/: adapter_mapping.py  catalog.py  exceptions.py  live_db.py  manifest.py  manifest_catalog.py  registry.py
src/dbt_osmosis_cll/cll_generator/cli/: main.py
src/dbt_osmosis_cll/cll_generator/lineage/: service.py
src/dbt_osmosis_cll/cll_generator/lineage/display/: __init__.py  base.py  dot.py  text.py
src/dbt_osmosis_cll/cll_generator/lineage/display/html/: explore.py
src/dbt_osmosis_cll/cll_generator/lineage/display/html/static/css/: graph.css
src/dbt_osmosis_cll/cll_generator/lineage/display/html/static/js/: explore.js
src/dbt_osmosis_cll/cll_generator/models/: schema.py
src/dbt_osmosis_cll/cll_generator/parser/: __init__.py  sql_parser.py  sql_parser_utils.py
src/dbt_osmosis_cll/integration/: __init__.py  cll.py  proxy.py
src/dbt_osmosis_cll/osmosis_propagation/: AGENTS.md  __init__.py  annotations.py  config.py  dbt_protocols.py  discovery.py  exceptions.py  formatting.py  inheritance.py  introspection.py  logger.py  node_filters.py  osmosis.py  path_management.py  plugins.py  settings.py  sync_operations.py  transforms.py  validation.py
src/dbt_osmosis_cll/osmosis_propagation/commands/: __init__.py  diff.py  doc_health.py  generators.py  llm.py  migration.py  restructuring.py  sql_lint.py  sql_operations.py  staging.py  test_suggestions.py  voice_learning.py
src/dbt_osmosis_cll/osmosis_propagation/commands/workbench/: app.py
src/dbt_osmosis_cll/osmosis_propagation/enrichment/: __init__.py  _engine.py  _merge.py  _yaml.py
src/dbt_osmosis_cll/osmosis_propagation/schema/: __init__.py  parser.py  reader.py  validation.py  writer.py
tests/: conftest.py  support.py  test_yaml_context.py  test_yaml_inheritance.py
tests/core/: test_annotate_column_origins.py  test_cli.py  test_cli_generate_group.py  test_cli_lineage.py  test_cll_golden_corpus.py  test_cll_manifest.py  test_cll_parser_hardening.py  test_cll_progenitors.py  test_cll_registry_identity.py  test_config.py  test_config_resolution.py  test_descriptions_equivalent.py  test_diff.py  test_doc_health.py  test_edge_cases.py  test_enrichment_engine.py  test_error_handling.py  test_formatting.py  test_generators.py  test_inheritance_behavior.py  test_inheritance_cll.py  test_inheritance_complex.py  test_introspection.py  test_legacy.py  test_llm.py  test_logger.py  test_migration.py  test_model_validation.py  test_node_filters.py  test_path_management.py  test_pipeline_integration.py  test_plugins.py  test_property_accessor.py  test_restructuring.py  test_schema.py  test_security.py  test_self_union_stripping.py  test_settings.py  test_settings_resolver.py  test_sql_lint.py  (+6 more)
tests/workbench/: test_ai_assistant.py
